config addition in user table and new offline sync onboarding Api
